test/spec_vectors/simd_i16x8_arith2/fail/module_8.wat
(module (func (result v128) (i16x8.abs (f32.const 0.0))))